<resources>
    <string name="app_name">Slasher</string>
    <string name="health_point_0">Health Point: 0</string>
    <string name="plust">+</string>
    <string name="minust">-</string>
    <string name="combat_point_0">Combat Point: 0</string>
    <string name="abstinence_point_0">Abstinence Point: 0</string>
    <string name="recklessness_balance_0">Recklessness Balance: 0</string>
    <string name="character_name">Character Name</string>
    <string name="character">Character</string>
    <string name="fight">Fight</string>
    <string name="inventory">Inventory</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="_0">0</string>
    <string name="recklessness">Recklessness</string>
    <string name="abstinence">Abstinence</string>
    <string name="combat">Combat</string>
    <string name="health">Health</string>
    <string name="masked">Masked</string>
    <string name="end_of_round">End of Round</string>
    <string name="reset">Reset</string>
    <string name="bookmark">Bookmark</string>
    <string name="map">Map</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
</resources>